# webgl

./: Cargo.toml  index.html  package-lock.json
gltype_derive/: Cargo.toml
gltype_derive/src/: lib.rs
src/: lib.rs  mesh.rs  renderer.rs  shader.rs
src/gfx/: gltype.rs  material.rs  mesh.rs  mod.rs  renderer.rs  shader.rs  types.rs
src/shaders/: simple.frag  simple.vert
